--- a/src/i18n/resources/zh-cn/common.json
+++ b/src/i18n/resources/zh-cn/common.json
@@ -156,7 +156,7 @@
       "expire_limited_zero": "此订阅已或即将到期，请及时续费",
       "expire_limited_other": "于 {{date}} 到期，距离到期还有 {{count}} 天，将于 {{reset_date}} 天后重置流量",
       "traffic": "已用流量 {{used}} GB / 总计流量 {{total}} GB",
-      "no-subscription": "您还没有订阅"
+      "no-subscription": "您好，欢迎加入！发现您还没购买订阅哦，先购买解锁全部功能吧😊！"
     },
     "shortcut": {
       "title": "捷径",
@@ -167,7 +167,7 @@
       },
       "subscribe": {
         "primary": "一键导入",
-        "secondary": "快速将节点导入对应客户端进行使用",
+        "secondary": "快速将配置导入到对应客户端进行使用",
         "copy": "复制订阅链接",
         "scan": "扫描二维码",
         "scan_tips": "使用支持扫码的客户端进行订阅",
@@ -178,7 +178,7 @@
         "quantumultx": "导入至 Quantumult X",
         "surge": "导入至 Surge",
         "stash": "导入至 Stash",
-        "buy-button": "购买"
+        "buy-button": "前往购买"
       },
       "purchase": {
         "primary_purchased": "续费订阅",
