--- a/src/i18n/resources/zh-cn/common.json
+++ b/src/i18n/resources/zh-cn/common.json
@@ -178,7 +178,7 @@
         "quantumultx": "导入至 Quantumult X",
         "surge": "导入至 Surge",
         "stash": "导入至 Stash",
-        "buy-button": "前往购买"
+        "buy-button": "购买"
       },
       "purchase": {
         "primary_purchased": "续费订阅",
