--- a/src/i18n/resources/zh-cn/common.json
+++ b/src/i18n/resources/zh-cn/common.json
@@ -234,7 +234,7 @@
         }
       },
       "products-header": {
-        "search": "搜索节点",
+        "search": "搜索套餐",
         "filter-button": "筛选"
       },
       "product-card": {
