--- a/src/i18n/resources/zh-cn/common.json
+++ b/src/i18n/resources/zh-cn/common.json
@@ -44,7 +44,7 @@
   "login": {
     "title": "登录",
     "email": "邮箱",
-    "email_placeholder": "请输入您的邮箱",
+    "email_placeholder": "请输入邮箱",
     "email_required": "您必须输入邮箱",
     "email_invalid": "您输入的邮箱无效",
     "password": "密码",
@@ -57,7 +57,7 @@
   "register": {
     "title": "注册",
     "email": "邮箱",
-    "email_placeholder": "请输入您的邮箱",
+    "email_placeholder": "请输入邮箱",
     "email_required": "您必须输入邮箱",
     "email_invalid": "您输入的邮箱无效",
     "email_max": "邮箱长度不能超过 {{count}} 个字符",
@@ -149,11 +149,12 @@
       "title": "公告"
     },
     "subscription-card": {
-      "title": "我的订阅",
+      "title": "订阅",
       "description": "您的订阅信息",
       "plan": "计划",
       "expire_forever": "此订阅长期有效",
-      "expire_limited_zero": "此订阅已或即将到期，请及时续费",
+      "expire_limited_zero": "此订阅将于24小时内到期，请及时续费",
+      "expire_is": "此订阅已到期，请续费后使用",
       "expire_limited_other": "于 {{date}} 到期，距离到期还有 {{count}} 天，将于 {{reset_date}} 天后重置流量",
       "traffic": "已用流量 {{used}} GB / 总计流量 {{total}} GB",
       "no-subscription": "您好，欢迎加入！发现您还没购买订阅哦，先购买解锁全部功能吧😊！"
@@ -166,8 +167,8 @@
         "secondary": "查看使用教程以了解如何使用本站服务"
       },
       "subscribe": {
-        "primary": "一键导入",
-        "secondary": "快速将配置导入到对应客户端进行使用",
+        "primary": "一键订阅",
+        "secondary": "快速将节点导入对应客户端进行使用",
         "copy": "复制订阅链接",
         "scan": "扫描二维码",
         "scan_tips": "使用支持扫码的客户端进行订阅",
@@ -316,6 +317,7 @@
         "order-status-value_pending": "待支付",
         "order-status-value_paid": "已支付",
         "order-status-value_cancelled": "已取消",
+        "order-status-value_finished": "已完成",
         "order-amount": "订单金额",
         "price": "{{value}} CNY",
         "coupon-amount": "优惠金额",
