--- a/src/i18n/resources/zh-cn/common.json
+++ b/src/i18n/resources/zh-cn/common.json
@@ -35,7 +35,7 @@
       }
     },
     "footer": {
-      "copyright": "© {{date}} <0>萌物云</0> 版权所有",
+      "copyright": "© {{date}} <0>跨越长城</0> 版权所有",
       "contact-us": "联系我们",
       "privacy-policy": "隐私政策",
       "terms-of-service": "服务条款"
@@ -84,7 +84,7 @@
     "password_confirm_invalid": "您两次输入的密码不一致",
     "password_confirm_required": "您必须再次输入密码",
     "go-login": "已有账户？登录",
-    "license_agree": "您确保已经完整阅读并同意我们的 <0>服务协议</0> 和 <1>隐私政策</1>",
+    "license_agree": "您确保已经阅读并同意我们的 <0>服务协议</0> 和 <1>隐私政策</1>",
     "agree_required": "您必须同意服务协议和隐私政策",
     "invite_code": "邀请码",
     "invite_code_max": "邀请码长度不能超过 {{count}} 个字符",
@@ -136,7 +136,7 @@
       "white_email": "本站暂不支持该邮箱后缀注册"
     },
     "footer": {
-      "copyright": "© {{date}} <0>萌物云</0> 版权所有",
+      "copyright": "© {{date}} <0>跨越长城</0> 版权所有",
       "links": {
         "terms": "服务协议",
         "privacy": "隐私政策"
@@ -149,7 +149,7 @@
       "title": "公告"
     },
     "subscription-card": {
-      "title": "订阅",
+      "title": "我的订阅",
       "description": "您的订阅信息",
       "plan": "计划",
       "expire_forever": "此订阅长期有效",
@@ -157,7 +157,7 @@
       "expire_is": "此订阅已到期，请续费后使用",
       "expire_limited_other": "于 {{date}} 到期，距离到期还有 {{count}} 天，将于 {{reset_date}} 天后重置流量",
       "traffic": "已用流量 {{used}} GB / 总计流量 {{total}} GB",
-      "no-subscription": "您还没有订阅"
+      "no-subscription": "您好，欢迎加入！发现您还没购买订阅哦，先购买解锁全部功能吧😊！"
     },
     "shortcut": {
       "title": "捷径",
@@ -167,7 +167,7 @@
         "secondary": "查看使用教程以了解如何使用本站服务"
       },
       "subscribe": {
-        "primary": "一键订阅",
+        "primary": "一键导入",
         "secondary": "快速将节点导入对应客户端进行使用",
         "copy": "复制订阅链接",
         "scan": "扫描二维码",
@@ -179,7 +179,7 @@
         "quantumultx": "导入至 Quantumult X",
         "surge": "导入至 Surge",
         "stash": "导入至 Stash",
-        "buy-button": "购买"
+        "buy-button": "购买订阅"
       },
       "purchase": {
         "primary_purchased": "续费订阅",
@@ -235,7 +235,7 @@
         }
       },
       "products-header": {
-        "search": "搜索节点",
+        "search": "搜索套餐",
         "filter-button": "筛选"
       },
       "product-card": {
